--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -2,53 +2,55 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover,user-scalable=no" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
 <title>WHOAI Gem</title>
 <style>
   html,body{margin:0;height:100%;overflow:hidden;background:#000;color:#fff;
-    font-family:system-ui,-apple-system,Segoe UI,Roboto,'Noto Sans JP',sans-serif;
-    touch-action:none; overscroll-behavior:none}
+    font-family:system-ui,"Noto Sans JP",sans-serif;touch-action:none}
 
   .bg{position:fixed;inset:0;background-size:cover;background-position:center;
       opacity:0;transition:opacity .7s}
   .bg.show{opacity:1}
 
-  #whoaiWrap{position:fixed;left:10vw;top:20vh;z-index:5;touch-action:none;display:none}
+  /* キャラ */
+  #whoaiWrap{position:fixed;z-index:5;touch-action:none;display:none}
   #whoai{width:clamp(80px,12vw,140px);user-select:none}
   .bubble{position:absolute;left:50%;bottom:100%;transform:translate(-50%,-8px);
           background:#fff;color:#111;border-radius:10px;padding:4px 8px;font-size:14px;
-          box-shadow:0 2px 6px rgba(0,0,0,.25);opacity:0;transition:.18s}
+          opacity:0;transition:.18s}
   .bubble.show{opacity:1;transform:translate(-50%,-12px)}
 
+  /* バケツ */
   #bucket{position:fixed;right:2vw;bottom:7vh;z-index:4;width:clamp(74px,14vw,160px)}
   #bucket img{width:100%;display:block}
   #counter{position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);
            background:#fff;color:#111;border-radius:999px;padding:4px 8px;font-weight:600}
 
+  /* 砂キャンバス */
   #sand{position:fixed;inset:0;z-index:2;touch-action:none}
-  .shell{position:fixed;z-index:3;width:clamp(48px,6vw,72px);height:clamp(48px,6vw,72px);
-         transform:translate(-50%,-50%) scale(.9);
-         background-size:contain;background-repeat:no-repeat;background-position:center;
-         cursor:grab;opacity:0;transition:opacity .18s,transform .18s}
-  .shell.show{opacity:1;transform:translate(-50%,-50%) scale(1)}
 
-  #toast{position:fixed;right:10px;top:10px;z-index:10;background:rgba(255,255,255,.9);
-         color:#111;padding:6px 12px;border-radius:8px;font-size:14px}
+  /* 貝 */
+  .shell{position:fixed;z-index:3;width:clamp(48px,6vw,72px);height:clamp(48px,6vw,72px);
+         transform:translate(-50%,-50%);
+         background-size:contain;background-repeat:no-repeat;background-position:center;
+         cursor:grab;opacity:0;transition:opacity .18s}
+  .shell.show{opacity:1}
+
+  /* UI */
+  #toast{position:fixed;right:10px;top:10px;z-index:10;
+         background:rgba(255,255,255,.9);color:#111;
+         padding:6px 12px;border-radius:8px;font-size:14px}
   .ui{position:fixed;left:50%;bottom:10px;transform:translateX(-50%);
       display:flex;gap:8px;z-index:10}
   .ui button{padding:6px 12px;border:none;border-radius:10px;cursor:pointer}
 
+  /* キャラ選択 */
   .panel{position:fixed;inset:0;z-index:12;background:rgba(0,0,0,.55);display:none;
          align-items:center;justify-content:center}
   .panel.show{display:flex}
-  .card{background:#fff;color:#111;border-radius:14px;padding:16px;width:min(92svw,980px)}
-
-  /* 夜の会話 */
-  #chatLog{background:#fdfdfd;color:#111;border-radius:10px;padding:10px;
-           min-height:120px;max-height:40vh;overflow:auto}
-  .msg{margin:6px 0}
-  .msg.me{color:#06c}
-  .msg.ai{color:#222}
+  .card{background:#fff;color:#111;border-radius:14px;padding:16px;width:min(92svw,600px)}
+  .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(100px,1fr));gap:12px}
+  .choice{border:1px solid #eee;border-radius:12px;padding:8px;text-align:center;cursor:pointer}
 </style>
 </head>
 <body>
@@ -57,7 +59,7 @@
   <div id="bg-night"   class="bg" style="background-image:url('./public/bg/night_beach.jpg')"></div>
 
   <div id="whoaiWrap">
-    <img id="whoai" src="./assets/stage1/green_open.png" alt="whoai">
+    <img id="whoai" src="" alt="whoai">
     <div id="bubble" class="bubble"></div>
   </div>
 
@@ -73,17 +75,15 @@
     <button id="btnStart">スタート</button>
     <button id="btnBegin">はじめに</button>
     <button id="btnNight">夜へ</button>
+    <button id="btnReset">リセット</button>
   </div>
 
-  <!-- 夜の会話 -->
-  <div id="nightPanel" class="panel">
+  <!-- キャラ選択 -->
+  <div id="charPanel" class="panel">
     <div class="card">
-      <h2>また明日</h2>
-      <p>今日のコレクションは保存しました。夜空を見ながら話そうか。</p>
-      <div id="chatLog"></div>
-      <input id="chatInput" type="text" placeholder="夜空を見ながら、何を話そう？">
-      <button id="chatSend">送信</button>
-      <button onclick="closeNight()">閉じる</button>
+      <h2>キャラを選んでね</h2>
+      <div id="charGrid" class="grid"></div>
+      <button onclick="closeCharPanel()">閉じる</button>
     </div>
   </div>
 
@@ -94,80 +94,87 @@ const say=(s)=>toast.textContent=s;
 const bg={sunrise:document.getElementById('bg-sunrise'),
           beach:document.getElementById('bg-beach'),
           night:document.getElementById('bg-night')};
-let currentScene='sunrise';
 function scene(name){Object.values(bg).forEach(e=>e.classList.remove('show'));
-  bg[name].classList.add('show'); currentScene=name;}
+  bg[name].classList.add('show');currentScene=name;}
+let currentScene='sunrise';
 
 const whoaiWrap=document.getElementById('whoaiWrap');
+const whoai=document.getElementById('whoai');
 const bubble=document.getElementById('bubble');
 function showBubble(text){bubble.textContent=text;
   bubble.classList.add('show');setTimeout(()=>bubble.classList.remove('show'),1200);}
 
 const bucket=document.getElementById('bucket');
-const counter=document.getElementById('counter');
-let count=0;
+const counter=document.getElementById('counter');let count=0;
 
+/* 砂キャンバス */
 const sand=document.getElementById('sand');
-const ctx=sand.getContext('2d');
+const ctx=sand.getContext('2d',{willReadFrequently:true});
 const TILE=90,BRUSH=28;let depth={},brushed={};
 function resizeSand(){sand.width=innerWidth;sand.height=innerHeight;
-  ctx.fillStyle="#d9c79e";ctx.fillRect(0,0,sand.width,sand.height);}
+  const g=ctx.createLinearGradient(0,0,0,sand.height);
+  g.addColorStop(0,'#e7d9b7');g.addColorStop(1,'#c8b68f');
+  ctx.fillStyle=g;ctx.fillRect(0,0,sand.width,sand.height);}
 function initDepth(){depth={};brushed={};}
 function brushAt(x,y){ctx.globalCompositeOperation='destination-out';
-  ctx.beginPath();ctx.arc(x,y,BRUSH,0,Math.PI*2);ctx.fill();
-  ctx.globalCompositeOperation='source-over';maybeSpawnNear(x,y);}
+  ctx.globalAlpha=0.4;ctx.beginPath();ctx.arc(x,y,BRUSH,0,Math.PI*2);ctx.fill();
+  ctx.globalAlpha=1;ctx.globalCompositeOperation='source-over';maybeSpawnNear(x,y);}
 sand.addEventListener('pointerdown',e=>{if(currentScene==='beach')brushAt(e.clientX,e.clientY);});
+sand.addEventListener('pointermove',e=>{if(currentScene==='beach'&&e.buttons)brushAt(e.clientX,e.clientY);});
 
+/* 貝 */
 const COMMON=['./public/items/asari1.png','./public/items/asari2.png','./public/items/asari3.png'];
 const RARE=['./public/items/aurora_shell.png','./public/items/rare_pearl.png','./public/items/rare_rainbow.png'];
-const shells=[];
 function maybeSpawnNear(x,y){
-  if(Math.random()>0.3)return;
+  if(Math.random()>0.2)return;
   const pool=Math.random()<0.8?COMMON:RARE;
   const src=pool[Math.floor(Math.random()*pool.length)];
   const el=document.createElement('div');el.className='shell';
   el.style.left=x+'px';el.style.top=y+'px';el.style.backgroundImage=`url(${src})`;
   document.body.appendChild(el);requestAnimationFrame(()=>el.classList.add('show'));
-  enableShellDrag(el);
+  enableShellDrag(el,src);
 }
-function enableShellDrag(el){
-  let pid=null;
-  el.addEventListener('pointerdown',e=>{pid=e.pointerId;el.setPointerCapture(pid);},{passive:false});
+function enableShellDrag(el,src){
+  let pid=null;el.addEventListener('pointerdown',e=>{pid=e.pointerId;el.setPointerCapture(pid);},{passive:false});
   el.addEventListener('pointermove',e=>{
     if(e.pointerId!==pid)return;
-    el.style.left=e.clientX+'px';el.style.top=e.clientY+'px';
-  },{passive:false});
+    el.style.left=e.clientX+'px';el.style.top=e.clientY+'px';},{passive:false});
   el.addEventListener('pointerup',e=>{
     if(e.pointerId!==pid)return;pid=null;
     const b=bucket.getBoundingClientRect(),s=el.getBoundingClientRect();
     if(!(s.right<b.left||s.left>b.right||s.bottom<b.top||s.top>b.bottom)){
       el.remove();counter.textContent=++count;
       showBubble(Math.random()<0.2?"レアだよ！":"やったね！");
-      if(count===10){showBubble("マカロンゲット！");}
-    }
-  },{passive:false});
+    }},{passive:false});
 }
 
-const nightPanel=document.getElementById('nightPanel');
-const chatLog=document.getElementById('chatLog');
-const chatInput=document.getElementById('chatInput');
-const chatSend=document.getElementById('chatSend');
-function openNight(){nightPanel.classList.add('show');}
-function closeNight(){nightPanel.classList.remove('show');}
-function addMsg(role,text){
-  const div=document.createElement('div');div.className='msg '+role;div.textContent=text;
-  chatLog.appendChild(div);chatLog.scrollTop=chatLog.scrollHeight;}
-chatSend.onclick=async()=>{
-  const text=chatInput.value.trim();if(!text)return;
-  addMsg('me',text);chatInput.value='';
-  try{const {reply}=await WHOAI_TALK.talk(text,{state:{totalCollected:count}});
-    addMsg('ai',reply);}catch(e){addMsg('ai','（接続できませんでした）');}
-};
+/* キャラ選択 */
+const CHAR_LIST=['blue_closed.png','green_open.png','orange_closed.png','pink_closed.png',
+  'purple_closed.png','tane_green.png','tane_pink.png','tane_purple.png','tane_blue.png']
+  .map(n=>`./assets/stage1/${n}`);
+const charPanel=document.getElementById('charPanel');
+const charGrid=document.getElementById('charGrid');
+function openCharPanel(){
+  if(!charGrid.dataset.ready){
+    CHAR_LIST.forEach(src=>{
+      const div=document.createElement('div');div.className='choice';
+      div.innerHTML=`<img src="${src}" alt=""><div>${src.split('/').pop().replace('.png','')}</div>`;
+      div.onclick=()=>{whoai.src=src;whoaiWrap.style.display='block';closeCharPanel();showBubble("おはよう");};
+      charGrid.appendChild(div);
+    });
+    charGrid.dataset.ready='1';
+  }
+  charPanel.classList.add('show');
+}
+function closeCharPanel(){charPanel.classList.remove('show');}
 
-document.getElementById('btnStart').onclick=()=>{whoaiWrap.style.display='block';say("キャラを選んでね");};
+/* ボタン */
+document.getElementById('btnStart').onclick=()=>{openCharPanel();};
 document.getElementById('btnBegin').onclick=()=>{scene('beach');say("砂をよけて、貝を探してね");resizeSand();initDepth();};
-document.getElementById('btnNight').onclick=()=>{scene('night');say("また明日");openNight();};
+document.getElementById('btnNight').onclick=()=>{scene('night');say("また明日");};
+document.getElementById('btnReset').onclick=()=>{localStorage.clear();location.reload();};
 
+/* 初期化 */
 function init(){scene('sunrise');say("おはよう。朝日がきれいだね");resizeSand();}
 addEventListener('resize',resizeSand);init();
 </script>
