--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
   <p>プロトタイプゲーム「WHOAI Gem」を用いて、朝日→砂なで→料理/アクセサリー/コレクションの流れを日課として体験してもらいます。ログはローカル保存を基本とし、必要に応じて任意の同意のもとで研究用アンケートを実施します。</p>
 
   <h2>想定される意義</h2>
-  <p>美術教育・メタバース・ウェルビーイング領域において、「お世話型学習」や「宝物化のデザイン」の具体例を提供します。消費や実用だけでは測れない価値—“一緒に過ごした時間の痕跡”—を可視化します。</p>
+  <p>「お世話型学習」や「宝物化のデザイン」の具体例を提供します。消費や実用だけでは測れない価値—“一緒に過ごした時間の痕跡”—を可視化します。</p>
 
   <h2>関連する問い</h2>
   <p>お世話はなぜ楽しいのか。集めたものはなぜ宝物になるのか。愛着は「一緒に過ごした時間の痕跡」と言えるのか。儚さは、やさしさとどう結びつくのか。</p>
