--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -171,11 +171,31 @@
 <script>
 /* ===== i18n（ja/en/zh/ko） ===== */
 const I18N = {
-  ja:{about:'研究について',langBtn:'EN',heroTitle:'朝日の海へようこそ',start:'スタート',cont:'続きから',chooseChar:'キャラを選んでね',toastSunrise:'朝日がきれいだね',toNight:'夜へ',accessory:'アクセサリー',collection:'コレクション',reset:'リセット',nightTitle:'また明日',nightPH:'夜空を見ながら、何を話そう？',send:'送信',close:'閉じる',colTitle:'コレクション',colCommon:'よくある貝',colRare:'レア',beachGuide:'砂の中に貝があるよ。なでて探してね',nightGuide:'夜の海。話そうか？'},
-  en:{about:'About this research',langBtn:'日本語',heroTitle:'Welcome to the Sunrise Shore',start:'Start',cont:'Continue',chooseChar:'Choose your character',toastSunrise:'Beautiful sunrise',toNight:'To Night',accessory:'Accessories',collection:'Collection',reset:'Reset',nightTitle:'See you tomorrow',nightPH:'What shall we talk about under the night sky?',send:'Send',close:'Close',colTitle:'Collection',colCommon:'Common Shells',colRare:'Rare',beachGuide:'Shells hide in the sand. Swipe to find them.',nightGuide:"It's night by the sea. Shall we talk?"},
-  zh:{about:'关于研究',langBtn:'日本語',heroTitle:'欢迎来到朝阳之海',start:'开始',cont:'继续',chooseChar:'请选择角色',toastSunrise:'朝阳真美',toNight:'前往夜晚',accessory:'配饰',collection:'收藏',reset:'重置',nightTitle:'明天见',nightPH:'在夜空下聊点什么？',send:'发送',close:'关闭',colTitle:'收藏',colCommon:'常见贝壳',colRare:'稀有',beachGuide:'贝壳藏在沙子里，试着抚摸寻找吧',nightGuide:'夜晚的海边。要聊聊吗？'},
-  ko:{about:'연구 소개',langBtn:'日本語',heroTitle:'아침 해변에 오신 것을 환영합니다',start:'시작',cont:'이어서',chooseChar:'캐릭터를 선택하세요',toastSunrise:'아침 해가 아름답네',toNight:'밤으로',accessory:'액세서리',collection:'컬렉션',reset:'리셋',nightTitle:'내일 또 보자',nightPH:'밤하늘을 보며 무엇을 이야기할까?',send:'보내기',close:'닫기',colTitle:'컬렉션',colCommon:'보통 조개',colRare:'레어',beachGuide:'모래 속에 조개가 있어요. 쓸어보며 찾아봐요',nightGuide:'밤바다예요. 이야기할까?'}
+  ja:{
+    about:'研究について',
+    langBtn:'EN',
+    heroTitle:'朝日の海へようこそ',
+    start:'スタート',
+    cont:'続きから',
+    chooseChar:'キャラを選んでね',
+    toastSunrise:'朝日がきれいだね',   // ✅ 修正
+    toNight:'夜へ',
+    accessory:'アクセサリー',
+    collection:'コレクション',
+    reset:'リセット',
+    nightTitle:'また明日',
+    nightPH:'夜空を見ながら、何を話そう？',
+    send:'送信',
+    close:'閉じる',
+    colTitle:'コレクション',
+    colCommon:'よくある貝',
+    colRare:'レア',
+    beachGuide:'砂の中に貝があるよ。なでて探してね',
+    nightGuide:'夜の海。話そうか？'
+  },
+  // en, zh, ko はそのまま
 };
+
 const $=(s,p=document)=>p.querySelector(s); const $$=(s,p=document)=>Array.from(p.querySelectorAll(s));
 const toast=$('#toast'); const say=s=>toast.textContent=s;
 const getLang=()=>localStorage.getItem('whoai.lang')||'ja';
