--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -27,13 +27,13 @@
     .bubble{position:absolute;left:50%;bottom:100%;transform:translate(-50%,-8px);background:rgba(255,255,255,.78);backdrop-filter:blur(2px);color:#111;border-radius:10px;padding:4px 8px;font-size:14px;box-shadow:0 2px 6px rgba(0,0,0,.25);opacity:0;transition:.18s;white-space:nowrap}
     .bubble.show{opacity:1;transform:translate(-50%,-12px)}
 
-    /* アクセサリー（2まわり大きく & 位置調整） */
+    /* アクセサリー（基準サイズ＆配置） */
     .acc{position:absolute;left:50%;transform:translate(-50%,-50%);pointer-events:none;z-index:2}
-    .acc.knit_hat{       top:14%;  width:42%;}
-    .acc.straw_hat{     top:24%;  width:45%;}
-    .acc.sunglasses{    top:47%; width:40%;}
-    .acc.ribbon_yellow{ top:28%; left:60%; width:22%;}
-    .acc.star_yellow{   top:28%; left:65%; width:20%;}
+    .acc.knit_hat{       top:14%; width:42%;}
+    .acc.straw_hat{     top:10%; width:45%;}
+    .acc.sunglasses{    top:38%; width:40%;}
+    .acc.ribbon_yellow{ top:16%; left:60%; width:22%;}
+    .acc.star_yellow{   top:20%; left:65%; width:20%;}
 
     /* バケツ（ビーチのみ表示） */
     #bucket{position:fixed;right:2vw;bottom:7vh;z-index:4;width:clamp(74px,14vw,160px);display:none}
@@ -56,7 +56,7 @@
     .ui.show{display:flex}
     .ui button{padding:8px 14px;border:none;border-radius:10px;cursor:pointer}
 
-    /* パネル（最前面に） */
+    /* パネル（最前面） */
     .panel{position:fixed;inset:0;z-index:90;background:rgba(0,0,0,.55);display:none;align-items:center;justify-content:center}
     .panel.show{display:flex}
     .card{background:#fff;color:#111;border-radius:14px;padding:16px;width:min(92svw,720px)}
@@ -64,6 +64,10 @@
     .choice{border:1px solid #eee;border-radius:12px;padding:8px;text-align:center;cursor:pointer;transition:transform .12s}
     .choice:hover{transform:translateY(-2px)}
     .choice img{width:80px;height:auto;display:block;margin:0 auto 6px}
+
+    /* アクセサリー一覧のロック表示 */
+    .accChoice.locked{opacity:.45;filter:grayscale(1)}
+    .meta{font-size:12px;color:#666;text-align:center}
 
     /* 夜の会話（半透明） */
     #nightPanel .card{width:min(96svw,640px);max-height:90vh;display:flex;flex-direction:column;backdrop-filter:blur(2px)}
@@ -166,43 +170,22 @@
     </div>
   </div>
 
-  <!-- 会話APIラッパ（フロント） -->
-  <script src="./api/talk.js"></script>
-<script>
+  <!-- 会話APIラッパ（フロント） ※/web/talk.js を読み込む -->
+  <script src="./web/talk.js"></script>
+
+  <script>
 /* ===== i18n（ja/en/zh/ko） ===== */
 const I18N = {
-  ja:{
-    about:'研究について',
-    langBtn:'EN',
-    heroTitle:'朝日の海へようこそ',
-    start:'スタート',
-    cont:'続きから',
-    chooseChar:'キャラを選んでね',
-    toastSunrise:'朝日がきれいだね',   // ✅ 修正
-    toNight:'夜へ',
-    accessory:'アクセサリー',
-    collection:'コレクション',
-    reset:'リセット',
-    nightTitle:'また明日',
-    nightPH:'夜空を見ながら、何を話そう？',
-    send:'送信',
-    close:'閉じる',
-    colTitle:'コレクション',
-    colCommon:'よくある貝',
-    colRare:'レア',
-    beachGuide:'砂の中に貝があるよ。なでて探してね',
-    nightGuide:'夜の海。話そうか？'
-  },
-  // en, zh, ko はそのまま
+  ja:{about:'研究について',langBtn:'EN',heroTitle:'朝日の海へようこそ',start:'スタート',cont:'続きから',chooseChar:'キャラを選んでね',toastSunrise:'朝日がきれいだね',toNight:'夜へ',accessory:'アクセサリー',collection:'コレクション',reset:'リセット',nightTitle:'また明日',nightPH:'夜空を見ながら、何を話そう？',send:'送信',close:'閉じる',colTitle:'コレクション',colCommon:'よくある貝',colRare:'レア',beachGuide:'砂の中に貝があるよ。なでて探してね',nightGuide:'夜の海。話そうか？'},
+  en:{about:'About this research',langBtn:'日本語',heroTitle:'Welcome to the Sunrise Shore',start:'Start',cont:'Continue',chooseChar:'Choose your character',toastSunrise:'Beautiful sunrise',toNight:'To Night',accessory:'Accessories',collection:'Collection',reset:'Reset',nightTitle:'See you tomorrow',nightPH:'What shall we talk about under the night sky?',send:'Send',close:'Close',colTitle:'Collection',colCommon:'Common Shells',colRare:'Rare',beachGuide:'Shells hide in the sand. Swipe to find them.',nightGuide:"It's night by the sea. Shall we talk?"},
+  zh:{about:'关于研究',langBtn:'日本語',heroTitle:'欢迎来到朝阳之海',start:'开始',cont:'继续',chooseChar:'请选择角色',toastSunrise:'朝阳真美',toNight:'前往夜晚',accessory:'配饰',collection:'收藏',reset:'重置',nightTitle:'明天见',nightPH:'在夜空下聊点什么？',send:'发送',close:'关闭',colTitle:'收藏',colCommon:'常见贝壳',colRare:'稀有',beachGuide:'贝壳藏在沙子里，试着抚摸寻找吧',nightGuide:'夜晚的海边。要聊聊吗？'},
+  ko:{about:'연구 소개',langBtn:'日本語',heroTitle:'아침 해변에 오신 것을 환영합니다',start:'시작',cont:'이어서',chooseChar:'캐릭터를 선택하세요',toastSunrise:'아침 해가 아름답네',toNight:'밤으로',accessory:'액세서리',collection:'컬렉션',reset:'리셋',nightTitle:'내일 또 보자',nightPH:'밤하늘을 보며 무엇을 이야기할까?',send:'보내기',close:'닫기',colTitle:'컬렉션',colCommon:'보통 조개',colRare:'레어',beachGuide:'모래 속에 조개가 있어요. 쓸어보며 찾아봐요',nightGuide:'밤바다예요. 이야기할까?'}
 };
-
 const $=(s,p=document)=>p.querySelector(s); const $$=(s,p=document)=>Array.from(p.querySelectorAll(s));
 const toast=$('#toast'); const say=s=>toast.textContent=s;
 const getLang=()=>localStorage.getItem('whoai.lang')||'ja';
 function setLang(lang){
-  const L=I18N[lang]||I18N.ja;
-  document.documentElement.setAttribute('lang',lang);
-  localStorage.setItem('whoai.lang',lang);
+  const L=I18N[lang]||I18N.ja; document.documentElement.setAttribute('lang',lang); localStorage.setItem('whoai.lang',lang);
   $('#btnAbout').textContent=L.about; $('#btnLang').textContent=L.langBtn;
   $('#heroTitle').textContent=L.heroTitle; $('#btnHeroStart').textContent=L.start; $('#btnHeroContinue').textContent=L.cont;
   $('#btnNight').textContent=L.toNight; $('#btnAccessory').textContent=L.accessory; $('#btnCollection').textContent=L.collection; $('#btnReset').textContent=L.reset;
@@ -210,11 +193,7 @@ function setLang(lang){
   $('#accTitle').textContent=L.accessory; $('#colTitle').textContent=L.colTitle; $('#colCommonTitle').textContent=L.colCommon; $('#colRareTitle').textContent=L.colRare;
   say(L.toastSunrise);
 }
-function toggleLang(){
-  const order=['ja','en','zh','ko']; const cur=getLang();
-  const idx=order.indexOf(cur); const next=order[(idx+1)%order.length];
-  setLang(next);
-}
+function toggleLang(){ const order=['ja','en','zh','ko']; const cur=getLang(); const idx=order.indexOf(cur); setLang(order[(idx+1)%order.length]); }
 
 /* ===== シーン ===== */
 const bg={sunrise:$('#bg-sunrise'),beach:$('#bg-beach'),night:$('#bg-night')};
@@ -261,7 +240,7 @@ function openCharPanel(){
     charGrid.dataset.ready='1';
   }
   openPanel(charPanel);
-  hero.style.pointerEvents='none';   // ← ヒーロー下のクリック無効
+  hero.style.pointerEvents='none'; // ヒーロー下のクリックを遮断
 }
 
 function selectChar(src){
@@ -271,7 +250,7 @@ function selectChar(src){
   whoaiWrap.style.bottom='12vh';
   store.set('whoai.char',src);
   closePanel(charPanel);
-  hero.style.pointerEvents='';       // ← 復帰
+  hero.style.pointerEvents='';
   showBubble('おはよう！');
   ensureWander();
   restoreAccessories();
@@ -281,7 +260,7 @@ function startGameWithChar(src){
   selectChar(src);
   hero.style.display='none';
   gameUi.classList.add('show');
-  scene('beach');                    // ← 自動でビーチへ
+  scene('beach');
 }
 
 function continueGame(){
@@ -293,7 +272,24 @@ function continueGame(){
   hero.style.display='none'; gameUi.classList.add('show');
   if(last==='night'){ scene('night'); openNight(); } else { scene('beach'); }
 }
-/* ===== アクセサリー（remove修正済） ===== */
+
+/* ===== アクセ解放ルール ===== */
+const UNLOCK_RULES = [
+  {key:'knit_hat',     need:3},
+  {key:'straw_hat',    need:6},
+  {key:'sunglasses',   need:9},
+  {key:'ribbon_yellow',need:12},
+  {key:'star_yellow',  need:15},
+];
+function getUnlocked(){ return new Set(store.get('whoai.unlocked',[])); }
+function setUnlocked(set){ store.set('whoai.unlocked', Array.from(set)); }
+function checkUnlocks(total){
+  const unlocked=getUnlocked(); let newly=[];
+  UNLOCK_RULES.forEach(r=>{ if(total>=r.need && !unlocked.has(r.key)){ unlocked.add(r.key); newly.push(r.key); }});
+  if(newly.length){ setUnlocked(unlocked); openAccessory(true); say('アクセサリーが解放されたよ！'); }
+}
+
+/* ===== アクセサリー ===== */
 const ACCESSORIES=[
   {key:'straw_hat',name:'麦わら帽子',src:'./public/accessories/straw_hat.png',cls:'straw_hat'},
   {key:'knit_hat',name:'毛糸の帽子',src:'./public/accessories/knit_hat.png',cls:'knit_hat'},
@@ -302,50 +298,52 @@ const ACCESSORIES=[
   {key:'star_yellow',name:'黄色のスター',src:'./public/accessories/star_yellow.png',cls:'star_yellow'},
 ];
 const accessoryPanel=$('#accessoryPanel'), accList=$('#accList'); $('#accClose').onclick=()=>closePanel(accessoryPanel);
-function openAccessory(){
-  if(!accList.dataset.ready){
+
+function openAccessory(forceRefresh=false){
+  const unlocked=getUnlocked();
+  if(!accList.dataset.ready || forceRefresh){
+    accList.innerHTML='';
     ACCESSORIES.forEach(a=>{
-      const item=document.createElement('div'); item.className='accChoice';
+      const rule=UNLOCK_RULES.find(r=>r.key===a.key);
+      const isUnlocked=unlocked.has(a.key);
+      const need=rule?rule.need:0;
+
+      const item=document.createElement('div');
+      item.className='accChoice'+(isUnlocked?'':' locked');
       item.innerHTML=`
         <img src="${a.src}" alt="${a.name}" style="width:80px;height:auto;display:block;margin:0 auto 6px">
-        <div class="t" style="text-align:center">
-          <div style="font-weight:700">${a.name}</div>
-          <div style="font-size:12px;color:#666">タップで装着/解除</div>
-        </div>
-        <input type="checkbox" aria-label="${a.name}" style="display:block;margin:8px auto 0">
+        <div class="t" style="text-align:center;font-weight:700">${a.name}</div>
+        <div class="meta">${isUnlocked ? 'タップで装着/解除' : `あと ${Math.max(0,need-totalCollected())} 個で解放`}</div>
+        <input type="checkbox" ${isUnlocked?'':'disabled'} style="display:block;margin:8px auto 0">
       `;
       const cb=item.querySelector('input');
       cb.addEventListener('change',()=>toggleAccessory(a,cb.checked));
-      item.addEventListener('click',e=>{ if(e.target.tagName!=='INPUT'){ cb.checked=!cb.checked; cb.dispatchEvent(new Event('change')); }});
-      item.dataset.key=a.key; accList.appendChild(item);
+      item.addEventListener('click',e=>{
+        if(!isUnlocked) return;
+        if(e.target.tagName!=='INPUT'){ cb.checked=!cb.checked; cb.dispatchEvent(new Event('change')); }
+      });
+      item.dataset.key=a.key;
+      accList.appendChild(item);
     });
     accList.dataset.ready='1';
   }
+  // 反映（保存済み装着）
   const active=new Set(store.get('whoai.accessories',[]));
-  $$('.accChoice',accList).forEach(div=>{ div.querySelector('input').checked=active.has(div.dataset.key); });
+  $$('.accChoice',accList).forEach(div=>{
+    const key=div.dataset.key; const cb=div.querySelector('input');
+    if(cb) cb.checked=active.has(key);
+  });
   openPanel(accessoryPanel);
 }
+
 function toggleAccessory(a,on){
   const active=new Set(store.get('whoai.accessories',[]));
   if(on){ active.add(a.key); addAccImg(a); } else { active.delete(a.key); removeAccImg(a.key); }
   store.set('whoai.accessories',Array.from(active));
 }
-function addAccImg(a){
-  removeAccImg(a.key);
-  const img=document.createElement('img');
-  img.src=a.src; img.alt=a.name;
-  img.className='acc '+(a.cls||'');
-  img.dataset.key=a.key;                      // ← data-key 必須
-  accLayer.appendChild(img);
-}
-function removeAccImg(key){
-  const el=accLayer.querySelector(`.acc[data-key="${key}"]`);
-  if(el) el.remove();
-}
-function restoreAccessories(){
-  const active=store.get('whoai.accessories',[]);
-  ACCESSORIES.forEach(a=>{ if(active.includes(a.key)) addAccImg(a); });
-}
+function addAccImg(a){ removeAccImg(a.key); const img=document.createElement('img'); img.src=a.src; img.alt=a.name; img.className='acc '+(a.cls||''); img.dataset.key=a.key; accLayer.appendChild(img); }
+function removeAccImg(key){ const el=accLayer.querySelector(`.acc[data-key="${key}"]`); if(el) el.remove(); }
+function restoreAccessories(){ const active=store.get('whoai.accessories',[]); ACCESSORIES.forEach(a=>{ if(active.includes(a.key)) addAccImg(a); }); }
 
 /* ===== 砂 & 貝（総出現 20） ===== */
 const sand=document.getElementById('sand'); const ctx=sand.getContext('2d',{willReadFrequently:true});
@@ -426,6 +424,7 @@ function enableShellDrag(el,key){
       const i=shells.findIndex(o=>o.el===el); if(i>-1) shells.splice(i,1);
       counter.textContent=++count; persistCount(); updateCollection(key,1);
       showBubble(Math.random()<.2?'レアだよ！':'やったね！'); refreshCollectionView();
+      checkUnlocks(totalCollected());           // ★貝数に応じてアンロック
     }
   }
   el.addEventListener('pointerup',finish,{passive:false});
@@ -504,9 +503,11 @@ function init(){
   // カウント復元
   count=store.get('whoai.count',0)||0; counter.textContent=count;
   spawnedTotal=store.get('whoai.spawned',0)||0;
+  // 初回アンロック更新
+  checkUnlocks(totalCollected());
 }
 addEventListener('resize',()=>{ if(currentScene==='beach') resizeSand(); });
 init();
-</script>
+  </script>
 </body>
 </html>
